# FSPDevs

./: .gitignore  ARCHIVE_SNAPSHOTS.txt  CODEBASE_MANIFEST.txt  Cargo.toml  FIBER_ECOSYSTEM_BEST_IN_CLASS.txt  FIBER_TESTNET_READINESS_REVIEW.txt  GEMINI_AUDIT_PROMPT.txt  GEMINI_CODE_AUDIT_v4.txt  GEMINI_DEEP_AUDIT_PROMPT.txt  GEMINI_HACKATHON_SUBMISSION_AUDIT.txt  GEMINI_IMPLEMENTATION_STATUS.txt  GEMINI_MFA_FA_HUB_AUDIT_REPORT.txt  GEMINI_MILESTONE_STATUS.txt  GEMINI_SIDECAR_DEVICE_SHIP_AUDIT.txt  GEMINI_SIDECAR_DEVICE_SHIP_PROMPT.txt  MFA supervisor API.docx  SIMULATION_BASE.txt  bundle-gemini-audit-10.ps1  bundle-gemini-audit-11.ps1  bundle-gemini-audit-12.ps1  bundle-gemini-audit-13.ps1  bundle-gemini-audit-14.ps1  bundle-gemini-audit-15.ps1  bundle-gemini-audit.ps1  index-legacy.html  index.html  jsconfig.json  package.json  production.Dockerfile  regulatory-audit.html
.github/workflows/: release.yml
Fiber Readiness/TPXDevs-testnet-readiness-v3/: dashboard.js
dashboard/: config.js  dashboard-module-ui.js  dom-security.js  format-grid.js  format.js  main.js  regulatory-core.js  sidecar-console.js  state.js  styles.css  topology.js  types.js
dashboard/api/: mfa.js
dashboard/canvas/: draw.js  layout.js  tooltip.js
dashboard/events/: liquidity.js  monitor.js  payment.js
deploy/: mesh-fleet-crd.yaml
deploy/droplet/: Cargo.workspace.mfa.toml  Cargo.workspace.treasury.toml  INVENTORY.env  README.md  apply-phase-a-hub.sh  apply-phase-b-mfa.sh  bind-fnn-rpc.sh  bootstrap.sh  check-ckb-balance.sh  check-faucet-funds.sh  check-fnn-local.sh  check-mfa-hub-rpc.sh  clear-fa1-nonce-mfa.sh  clear-treasury-queue.sh  derive-hub-pubkey.py  derive-hub-pubkey.sh  docker-compose.mfa.yml  docker-compose.treasury.yml  (+41 more)
fiber-agent/: .env.example  .gitignore  Cargo.toml  index.html  package-lock.json  package.json
fiber-agent/profiles/: coop.profile.toml  full.profile.toml  kiosk.profile.toml  relay.profile.toml
fiber-agent/scripts/: fa-tauri-instance.ps1  prepare-fnn-sidecar.ps1  run-fa-sidecar.ps1  setup-android-env.ps1  setup-android-env.sh  tauri-dev-fa.ps1
fiber-agent/src/: clearing_client.rs  daemon.rs  dicoba_bridge.rs  fees.rs  fiat_bridge.rs  fnn_client.rs  hot_swap.rs  identity.rs  lib.rs  main.rs  mesh.rs  mesh_ports.rs  mfa_control_bus.rs  mfa_ws_auth.rs  module_catalog.rs  module_host.rs  module_profile.rs  module_registry.rs  module_system.rs  payment.rs  peer_packet.rs  power.rs  storage.rs  storage_error.rs  telemetry.rs  utility_runtime.rs
fiber-agent/src-tauri/: Cargo.toml  tauri.conf.json
fiber-agent/src-tauri/binaries/: .gitignore  README.md
fiber-agent/src-tauri/capabilities/: default.json
fiber-agent/src-tauri/frontend/: .gitignore  boot.js  dom.js  index.html  package.json  sidecar-console.js
fiber-agent/src-tauri/frontend/dashboard/: config.js  dashboard-module-api.js  dom.js  fetch-timeout.js  logger.js  money.js
fiber-agent/src-tauri/frontend/js/: app.js  channels.js  dashboard-stats.js  dicoba-member-id.js  dom-security.js  fa-module-store-api.js  fnn-fatal.js  funding.js  icons.js  module-registry.js  oob-fallback.js  panel-shell.js  shell-icons.js  shell.js  sidecar-api.js  sidecar-runtime.js  stats-ui.js  ui-host.js
fiber-agent/src-tauri/frontend/js/modules/app-store/: app-store-panel.js  index.js
fiber-agent/src-tauri/frontend/js/modules/channels/: channels-panel.js  index.js
fiber-agent/src-tauri/frontend/js/modules/dicoba/: index.js  loan-panel.js  module-stats.js  savings-panel.js  state.js  vault-contributors.js  vault-picker.js
fiber-agent/src-tauri/frontend/js/modules/fiat-bridge/: fee-panel.js  float-panel.js  index.js  module-stats.js
fiber-agent/src-tauri/frontend/js/modules/funding/: funding-panel.js  index.js
fiber-agent/src-tauri/frontend/styles/: channels.css  console.css  funding.css
fiber-agent/src-tauri/src/: commands.rs  fnn_address.rs  fnn_sidecar.rs  lib.rs  main.rs
fiber-agent/src-tauri/web-sdk/: package-lock.json  package.json
fiber-agent/src/api/: auth.rs  mod.rs  module_routes.rs
fiber-agent/src/modules/: dicoba_module.rs  fiat_bridge_module.rs  fiber_agent_swarm.rs  lume_yielding.rs  mod.rs  registry.rs  securities_compliance.rs  telco_sweep.rs
fnn-testnet/: .gitignore  New-FnnNodeConfig.ps1  get-ckb-address.ps1  mesh-pubkeys.example.json  mesh-pubkeys.live.example.json  run-live-dashboard.ps1  setup-public-channel.ps1  setup-testnet-key.ps1  spawn-live-fnn-nodes.ps1  spawn-mesh-fleet.ps1  start-dashboard.ps1  start-live-mfa.ps1  start-live-sidecar.ps1  start-testnet.ps1  stop-mesh-fleet.ps1  stop-testnet.ps1
fsp-console/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
fsp-fixed-math/: Cargo.toml
master-fiber-agent/: Cargo.toml  clearing-policy.yml
master-fiber-agent/src/: auth.rs  clearing.rs  clearinghouse.rs  compliance_hub.rs  config.rs  fnn_client.rs  graph.rs  graph_persistence.rs  hub.rs  lib.rs  main.rs  mfa_storage.rs  micro_routing.rs  middleware.rs  papss.rs  payment.rs  plugin_registry.rs  routing.rs  state.rs  storage_error.rs  telemetry.rs  traits.rs  types.rs  ui_events.rs
master-fiber-agent/src/api/: mod.rs  plugin_routes.rs
master-fiber-agent/src/handlers/: auth.rs  clearing.rs  compliance.rs  health.rs  mod.rs  route.rs  simulation.rs  telemetry.rs  ws_agent.rs  ws_monitor.rs
master-fiber-agent/src/plugins/: automated_refueling.rs  clearinghouse_swap.rs  lume_pricing.rs  mod.rs  sovereign_compliance.rs
master-fiber-agent/src/policies/: catalog.rs  mod.rs  registry.rs
master-fiber-agent/src/workers/: background.rs
master-fiber-agent/tests/: end_to_end_swap.rs
mesh-core/: Cargo.toml
mesh-core/src/: compliance.rs  constants.rs  currency.rs  dicoba_logic.rs  error.rs  jungukuu_types.rs  lib.rs  network.rs  papss_types.rs  pubkey.rs  registry.rs  telemetry.rs  topology.rs  types.rs
mesh-operator/: Cargo.toml
mesh-operator/src/: controller.rs  crd.rs  main.rs
mfa-console/: index.html
scripts/: integrity.mjs  sync-mfa-css.mjs  sync-sidecar-ui.mjs
types/: ckb-ccc-shims.d.ts  global.d.ts
(+84 files in other folders)
