[package]
name = "fiber_agent_sidecar"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fiber-agent-daemon"
path = "src/main.rs"

[[bin]]
name = "mesh-fleet-daemon"
path = "src/bin/mesh_fleet.rs"

[dependencies]
mesh-core = { path = "../mesh-core" }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
