[package]
name = "fiber_agent_sidecar"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fiber-agent-daemon"
path = "src/main.rs"

[[bin]]
name = "mesh-fleet-daemon"
path = "src/bin/mesh_fleet.rs"

[dependencies]
mesh-core = { path = "../mesh-core" }
fsp-fixed-math = { path = "../fsp-fixed-math" }
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
log = "0.4"
toml = "0.8"
dirs = "5"
