[package]
name = "master_fiber_agent"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
