[package]
name = "master_fiber_agent"
version = "1.0.0"
edition = "2021"

[dependencies]
mesh-core = { path = "../mesh-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
