[package]
name = "master_fiber_agent"
version = "1.0.0"
edition = "2021"

[dependencies]
mesh-core = { path = "../mesh-core" }
fsp-fixed-math = { path = "../fsp-fixed-math" }
serde_yaml = "0.9"
axum = { version = "0.7", features = ["ws"] }
log = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Outbound PAPSS / clearing HTTP — rustls only (no native-tls/openssl).
# `use_preconfigured_tls` requires the same rustls major as reqwest (0.23 via 0.12).
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
] }
once_cell = "1"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
hyper = "1"
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server", "service"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
subtle = "2"
async-trait = "0.1"
thiserror = "2"
getrandom = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dashmap = "6"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
