[package]
name = "mesh-core"
version = "1.0.0"
edition = "2021"

[dependencies]
fsp-fixed-math = { path = "../fsp-fixed-math" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
hex = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[dev-dependencies]
sha2 = "0.10"
secp256k1 = { version = "0.29", default-features = false, features = ["std", "rand"] }
