[package]
name = "mesh-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator CRDs for FSPDevs Fiber Agent mesh fleets"

[dependencies]
kube = { version = "0.98", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[[bin]]
name = "mesh-operator"
path = "src/main.rs"
